<resources>
    <string name="app_name">PokemonAPI</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="height">Height</string>
    <string name="weight">Weight</string>
    <string name="hp">HP</string>
    <string name="atk">ATK</string>
    <string name="def">DEF</string>
    <string name="spd">SPD</string>
    <string name="exp">EXP</string>
</resources>