<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout

    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.DetailsFragment"
    android:background="@color/cardview_dark_background"
    android:id="@+id/constraint_layout"
    android:transitionName="shared_element_container">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/carview_radius"
        android:elevation="100dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/pokemonImage"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_gravity="center"
            android:src="@mipmap/ic_launcher_round"
            android:transitionName="image_small"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            >

        </ImageView>

        <ToggleButton
            android:id="@+id/fav_button"
            android:layout_width="33dp"
            android:layout_height="33dp"
            android:layout_gravity="end"
            android:layout_marginStart="2dp"
            android:layout_marginTop="1dp"
            android:background="@drawable/button_favorite"
            android:checked="false"
            android:text=""
            android:textOff=""
            android:textOn=""
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>


    <TextView
        android:id="@+id/pokemon_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:gravity="center"
        android:text="TextView"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="24dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/linearLayout" />

    <GridLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:id="@+id/skils_grid"
        android:rowCount="1"
        android:columnCount="2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pokemon_name">

        <TextView
            android:layout_marginEnd="8dp"
            android:id="@+id/skill_one"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_columnWeight="0.5"
            android:background="@drawable/text_radius"
            android:padding="10dp"
            android:text="TextView"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="20dp"
            android:textStyle="bold" />

        <TextView
            android:layout_marginStart="8dp"
            android:id="@+id/skill_two"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_columnWeight="0.5"
            android:background="@drawable/text_radius"
            android:padding="10dp"
            android:text="TextView"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="20dp"
            android:textStyle="bold" />


    </GridLayout>



    <GridLayout
        android:padding="10dp"
        android:id="@+id/grid_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:columnCount="2"
        android:rowCount="2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/skils_grid">


        <TextView
            android:id="@+id/pokemon_weightValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_columnWeight="0.5"
            android:padding="10dp"
            android:text="TextView"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="20dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/pokemon_heightValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_columnWeight="0.5"
            android:padding="10dp"
            android:text="TextView"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="20dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/pokemon_weight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_columnWeight="0.5"
            android:padding="10dp"
            android:text="@string/weight"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="20dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/pokemon_heigt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_columnWeight="0.5"
            android:padding="10dp"
            android:text="@string/height"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="20dp"
            android:textStyle="bold" />



    </GridLayout>


    <TextView
        android:id="@+id/BaseStatsText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="Base Stats"
        android:textAlignment="center"
        android:textSize="24dp"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/grid_layout" />

    <GridLayout
        android:padding="20dp"
        android:layout_marginTop="16dp"
        android:id="@+id/grid_layout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:columnCount="2"
        android:rowCount="5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/BaseStatsText">

        <TextView

            android:id="@+id/pokemon_hp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_columnWeight="0.25"
            android:text="@string/hp"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="20dp"
            android:textStyle="bold" />

        <ProgressBar
            android:id="@+id/bar_hp"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="wrap_content"
            android:layout_height="28dp"
            android:max="100"
            android:layout_columnWeight="0.70"
            android:progressTint="@color/red"
            android:progressBackgroundTint="@color/white"/>

        <TextView
            android:id="@+id/pokemon_atk"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_columnWeight="0.25"
            android:text="@string/atk"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="20dp"
            android:textStyle="bold" />

        <ProgressBar
            android:id="@+id/bar_atk"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="wrap_content"
            android:layout_height="28dp"
            android:layout_columnWeight="0.70"
            android:progressTint="@color/orange"
            android:progressBackgroundTint="@color/white"/>

        <TextView
            android:id="@+id/pokemon_def"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_columnWeight="0.25"
            android:text="@string/def"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="20dp"
            android:textStyle="bold" />

        <ProgressBar
            android:id="@+id/bar_def"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="wrap_content"
            android:layout_height="28dp"
            android:layout_columnWeight="0.70"
            android:progressTint="@color/blue"
            android:progressBackgroundTint="@color/white"/>

        <TextView
            android:id="@+id/pokemon_spd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_columnWeight="0.25"
            android:text="@string/spd"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="20dp"
            android:textStyle="bold" />

        <ProgressBar
            android:id="@+id/bar_spd"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="wrap_content"
            android:layout_height="28dp"
            android:layout_columnWeight="0.70"
            android:progressTint="@color/yellow"
            android:progressBackgroundTint="@color/white"/>

        <TextView
            android:id="@+id/pokemon_exp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_columnWeight="0.25"
            android:text="@string/exp"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="20dp"
            android:textStyle="bold" />

        <ProgressBar
            android:id="@+id/bar_exp"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="wrap_content"
            android:layout_height="28dp"
            android:layout_columnWeight="0.70"
            android:progressTint="@color/green"
            android:progressBackgroundTint="@color/white"/>




    </GridLayout>






</androidx.constraintlayout.widget.ConstraintLayout>